Add license info

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "sleef-port"
 version = "0.1.0"
 edition = "2021"
+authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
+license = "BSL-1.0"
+license-file = "LICENSE.txt"
+description = "Port of certain sleef.org functions"
 
 [[bench]]
 name = "sind4_u35avx"
