--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,10 @@ harness = false
 name = "sind1_u35purec"
 harness = false
 
+[[bench]]
+name = "sinf1_u35purec_range125"
+harness = false
+
 [profile.bench]
 opt-level = 3
 lto = "thin"
