--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,12 @@ harness = false
 name = "sleef-f64x2"
 harness = false
 
+[profile.release]
+opt-level = 3
+lto = "thin"
+debug = true
+codegen-units = 1
+
 [profile.bench]
 opt-level = 3
 lto = "thin"
