Implement Sleef_sind2_u35sse2 (#1)
* WIP: add sse2 impl

* Update f64x2 bench

* Update values in debug programs for sse2 f64

* Implement Sleef_sind2_u35sse2

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ name = "sind4_u35avx"
 harness = false
 
 [[bench]]
+name = "sind2_u35sse2"
+harness = false
+
+[[bench]]
 name = "sind1_u35purec"
 harness = false
 
@@ -21,6 +25,16 @@ harness = false
 [[bench]]
 name = "cosf1_u35purec_range125"
 harness = false
+
+[[bench]]
+name = "sleef-f64x2"
+harness = false
+
+[profile.release]
+opt-level = 3
+lto = "thin"
+debug = true
+codegen-units = 1
 
 [profile.bench]
 opt-level = 3
