--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
 			"type": "lldb",
 			"request": "launch",
 			"cargo": {
-			    "args": ["build", "--bin=sleef-sind"],
+			    "args": ["build", "--release", "--bin=sleef-trig"],
 			    "problemMatcher": "$rustc",
 			}
 		    }
