Add Cargo.toml exclude statements for test/debug files

--- a/sleef-trig/Cargo.toml
+++ b/sleef-trig/Cargo.toml
@@ -9,7 +9,7 @@ readme = "../README.md"
 repository = "https://github.com/greatest-ape/sleef-trig"
 keywords = ["math", "trigonometry", "audio"]
 categories = ["mathematics"]
-
+exclude = ["./src/main.rs"]
 
 [[bench]]
 name = "f32_purec"
