--- a/sleef-trig-sys/Cargo.toml
+++ b/sleef-trig-sys/Cargo.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 repository = "https://github.com/greatest-ape/sleef-trig"
 keywords = ["math", "trigonometry", "audio", "ffi"]
 categories = ["mathematics", "external-ffi-bindings"]
+exclude = ["./c/test_sleef_sind1_u35purec.c", "./c/test_sleef_sind2_u35sse2.c"]
 
 [build-dependencies]
 cc = "1.0"
